[tool.poetry]
name = "awsregioninstancelisting"
version = "0.1.0"
description = ""
authors = ["Büşra Zeynep Kara <busrazeynep.kara@agesa.com.tr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.35.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
